# iGameView

./: .gitignore  CMakeLists.txt  LICENSE  ModelDraw.cpp  ModelDraw.h  PrintInfo.cpp  PrintInfo.h  README.md  TinyVector.h  Turbine_Blade.qrc  Turbine_Blade.ui  ViewOpenGL.cpp  ViewOpenGL.h  color.frag  color.vert  iGameMeshView.cpp  iGameMeshView.h  main.cpp
NurbsSDK/: AutoGeoCreate.cpp  AutoGeoCreate.h  Basis.cpp  Basis.h  Curve.cpp  Curve.h  FileUtil.cpp  FileUtil.h  Geo.h  MultiGeo.cpp  MultiGeo.h  Surface.cpp  Surface.h  Volume.cpp  Volume.h
NurbsSDK/Model/: H1.xml  circle(1).xml  circle(2).xml  curve (2).xml  egg1.xml  g_plus_s_surf1.xml  hand1.xml  konglong1.xml  surface.xml  surface1.xml  teapot1.xml  terrific1.xml
